# personal-ai-employee

./: .env.example  .gitignore  .mcp.json  CLAUDE_SESSION.md  DEMO_VIDEO_SCRIPT.md  GAP_ANALYSIS.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_REPORT.md  WALKTHROUGH.md  docker-compose.yml  doctor  ecosystem.config.js  gmail-oauth.skill  gmail-pubsub-push.skill  google-calendar.skill  main.py  mcp-server.skill  meta-setup.skill  model_config.yaml  process-inbox.skill  pyproject.toml  setup_guide.md  whatsapp-cloud-api.skill
.claude/skills/: process-inbox.md  (+4 more)
docs/: ARCHITECTURE.md  Demo Day 01_ Showcasing First AI Employees _ Personal AI Employee Hackathon 0.txt  Demo Day 02_ Showcasing AI Employees _ Personal AI Employee Hackathon 0.txt  Demo Day 03_ Showcasing AI Employees, Agent Maturity Model and Hacakthon 5 Introduction.txt  demo-script.md  hackathon-0-improvement-plan.md  setup-facebook-instagram.md  setup-gmail.md
scripts/: demo_e2e.py  demo_inject.py  demo_monitor.sh  fb_explorer_helper.py  fix_fb_permissions.py  generate_ceo_briefing.py  setup_gmail_push.py  start.sh  test_email_whatsapp_e2e.py  test_gold_tier.py  test_social_e2e.py  test_whatsapp.py  test_whatsapp_business_e2e.py  whatsapp_login.py  whatsapp_send.py
tests/: __init__.py  conftest.py  test_core_config.py  test_core_logger.py  test_core_rate_limiter.py  test_core_retry.py  test_integration.py  test_orchestrator_approval.py  test_orchestrator_claim.py  test_orchestrator_dashboard.py  test_watchers_filesystem.py  test_watchers_gmail.py
(+112 files in other folders)
